# portfolio-tracker

./: .gitignore  Dockerfile  makefile  package-lock.json  package.json
backend/: Makefile  app.py  imports.py  output.csv  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/routers/: base.py  importer.py  stocks.py
backend/app/types/: degiro.py  stocks.py
backend/app_manager/: __init__.py  app_manager.py
backend/db_structure/: __init__.py  database.py  json_encoder.py  model.py  sql_meta.py  views.py
backend/migrations/: env.py
backend/migrations/versions/: 2dfb8ce079e5_create_owner_uuid.py  52c1139f99e2_added_timezone.py  701c8cda5915_add_unique_constraint_on_sharehistory.py  964908c0a7bd_added_unique_constraint_share_actions.py  c23ec10e8cd3_added_unique_constraint.py  ef227d66b2c3_create_a_baseline_migrations.py  efd992ae5249_add_capital_gains.py
backend/static/: landing.html
backend/stock_importer/: StockImporter.py  __init__.py
backend/stock_manager/: __init__.py  analysis.py  degiro.py  manager.py
backend/tasks/: __init__.py
backend/utils/: __init__.py  degiro.py  exceptions.py  helpers.py  logger.py  yfinance_session.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/IuComponentLib/: tsconfig.json
frontend/src/components/: GraphLine.vue  GraphTotalValue.vue  PrestationCard.vue  TheHeader.vue  TheLoginModel.vue  TheTimeLine.vue
frontend/src/enums/: Notification.ts
frontend/src/router/: index.ts
(+34 files in other folders)
